student Single page verstka finished

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -8,5 +8,30 @@
   "total_paid": "Total amount paid",
   "total_need": "Total amount requested",
   "total_must_pay": "Amount to be paid",
-  "search": "search"
+  "search": "search",
+  "filter": "Filter",
+  "phoneNumber": "Phone number",
+  "SponsorshipAmount": "Sponsorship amount",
+  "AmountSpent": "Amount spent",
+  "date": "date",
+  "Status": "Status",
+  "Actions": "Actions",
+  "ShowDetail": "{{all}} out of  {{first}}-{{latest}} showing",
+  "Show": "Show",
+  "NumberOfStudentsAndSponsors": "Number of Sponsors and Students",
+  "aboutSponsor": "About sponsor",
+  "edit": "Edit",
+  "addStudent": "Add Student",
+  "StudentType": "Student type",
+  "otm": "OTM",
+  "AllocatedAmount": "Allocated amount",
+  "ContractAmount": "Contract amount",
+  "fullName": "S.F.P. (Surname, First Name , Patronymic)",
+  "chooseOtm": "Select OTM",
+  "enterAmount": "Enter the amount",
+  "all": "All",
+  "bachelor": "Bachelor",
+  "masterDegree": "Master's Degree",
+  "phd": "Phd",
+  "add": "Add"
 }
