--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -8,5 +8,30 @@
   "total_paid": "Общая сумма выплачена",
   "total_need": "Общая запрошенная сумма",
   "total_must_pay": "Сумма к оплате",
-  "search": "поиск"
+  "search": "поиск",
+  "filter": "Фильтр",
+  "phoneNumber": "номер телефона",
+  "SponsorshipAmount": "Сумма спонсорства",
+  "AmountSpent": "Потраченная сумма",
+  "date": "Дата",
+  "Status": "Статус",
+  "Actions": "Действия",
+  "ShowDetail": "{{all}} из   {{first}}-{{latest}} показаны",
+  "Show": "Показывать",
+  "NumberOfStudentsAndSponsors": "Количество спонсоров и студентов",
+  "aboutSponsor": "O спонсоре",
+  "edit": "Редактирование",
+  "addStudent": "Добавить студента",
+  "StudentType": "Тип студента",
+  "otm": "ОТМ",
+  "AllocatedAmount": "Выделенная сумма",
+  "ContractAmount": "Сумма контракта",
+  "fullName": "Ф.И.O. (Фамилия, Имя, Отчество)",
+  "chooseOtm": "Выберите ОТМ",
+  "enterAmount": "Введите сумму",
+  "all": "Все",
+  "bachelor": "Бакалавр",
+  "masterDegree": "магистра",
+  "phd": "Phd",
+  "add": "Добавить"
 }
