--- a/src/locales/uz/translation.json
+++ b/src/locales/uz/translation.json
@@ -8,5 +8,30 @@
   "total_paid": "Jami to'langan summa",
   "total_need": "Jami so'ralgan summa",
   "total_must_pay": "To'lanishi kerak summa",
-  "search": "izlash"
+  "search": "izlash",
+  "filter": "Filtr",
+  "phoneNumber": "Telefon Raqam",
+  "SponsorshipAmount": "Homiylik summasi",
+  "AmountSpent": "Sarflangan summa",
+  "date": "Sana",
+  "Status": "Holati",
+  "Actions": "Amallar",
+  "ShowDetail": "{{all}} tadan  {{first}}-{{latest}} ko'rsatilmoqda",
+  "Show": "Ko'rsatish",
+  "NumberOfStudentsAndSponsors": "Homiylar va talabalar soni",
+  "aboutSponsor": "Homiy haqida",
+  "edit": "Tahrirlash",
+  "addStudent": "Talaba qo'shish",
+  "StudentType": "Talabalik turi",
+  "OTM": "OTM",
+  "AllocatedAmount": "Ajratilgan summa",
+  "ContractAmount": "Konrtakt miqdori",
+  "fullName": "F.I.Sh. (Familiya Ism Sharifingiz)",
+  "chooseOtm": "OTM ni tanlang",
+  "enterAmount": "Summani kiriting:",
+  "all": "Barchasi",
+  "bachelor": "Bakalavr",
+  "masterDegree": "Magistratura",
+  "phd": "Phd",
+  "add": "Qo'shish"
 }
