Edit Student finished

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -38,5 +38,6 @@
   "aboutStudent": "About Student",
   "mainInfo": "Main Info",
   "infoAboutOTM": "Information about the place of study",
-  "StudentSponsors": "Student sponsors"
+  "StudentSponsors": "Student sponsors",
+  "Save": "Save"
 }
