--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -38,5 +38,6 @@
   "aboutStudent": "О студенте",
   "mainInfo": "Основная информация",
   "infoAboutOTM": "Информация о месте обучения",
-  "StudentSponsors": "Студенческие спонсоры"
+  "StudentSponsors": "Студенческие спонсоры",
+  "Save": "Сохранить"
 }
