--- a/src/locales/uz/translation.json
+++ b/src/locales/uz/translation.json
@@ -38,5 +38,6 @@
   "aboutStudent": "Talaba Haqida",
   "mainInfo": "Asosiy ma'lumotlar",
   "infoAboutOTM": "O'qish joyi haqida ma'lumot",
-  "StudentSponsors": "Talabaga homiylar"
+  "StudentSponsors": "Talabaga homiylar",
+  "Save": "Saqlash"
 }
