--- a/src/languages/uz/translation.json
+++ b/src/languages/uz/translation.json
@@ -1,5 +1,5 @@
 {
-  "enter": "KIRISH",
+  "enter": "Kirish",
   "login": "LOGIN",
   "password": "PAROL",
   "submit": "Kirish",
@@ -8,8 +8,9 @@
   "total_paid": "Jami to'langan summa",
   "total_need": "Jami so'ralgan summa",
   "total_must_pay": "To'lanishi kerak summa",
+  "numbersOfStudentsAndSponsors": "Homiylar va talabalar soni",
   "search": "izlash",
-  "filter": "Filtr",
+  "filter": "Filter",
   "phoneNumber": "Telefon Raqam",
   "SponsorshipAmount": "Homiylik summasi",
   "AmountSpent": "Sarflangan summa",
@@ -34,7 +35,7 @@
   "masterDegree": "Magistratura",
   "phd": "Phd",
   "add": "Qo'shish",
-  "addSponsor": "Homiy Qo'shish",
+  "addSponsor": "Homiy qo'shish",
   "aboutStudent": "Talaba Haqida",
   "mainInfo": "Asosiy ma'lumotlar",
   "infoAboutOTM": "O'qish joyi haqida ma'lumot",
