--- a/src/languages/en/translation.json
+++ b/src/languages/en/translation.json
@@ -1,5 +1,5 @@
 {
-  "enter": "LOGIN",
+  "enter": "Login",
   "login": "LOGIN",
   "password": "PASSWORD",
   "submit": "Login",
@@ -8,6 +8,7 @@
   "total_paid": "Total amount paid",
   "total_need": "Total amount requested",
   "total_must_pay": "Amount to be paid",
+  "numbersOfStudentsAndSponsors": "Number of sponsors and students",
   "search": "search",
   "filter": "Filter",
   "phoneNumber": "Phone number",
