FormSelect added and Some refactoring

--- a/src/languages/en/translation.json
+++ b/src/languages/en/translation.json
@@ -46,5 +46,11 @@
   "physicalPerson": "Physical Person",
   "applicationStatus": "Application Status",
   "clean": "Clean",
-  "SeeResults": "See Results"
+  "SeeResults": "See Results",
+  "new": "New",
+  "inModeration": "In Moderation",
+  "approved": "Approved",
+  "canceled": "Cancelled",
+  "editSponsor": "Edit Sponsors",
+  "deleteSponsor": "Delete Sponsor"
 }
