--- a/src/languages/ru/translation.json
+++ b/src/languages/ru/translation.json
@@ -46,5 +46,11 @@
   "physicalPerson": "физическое лицо",
   "applicationStatus": "статус заявки",
   "clean": "Очистить",
-  "SeeResults": "Посмотреть результаты"
+  "SeeResults": "Посмотреть результаты",
+  "new": "Новый",
+  "inModeration": "В умеренности",
+  "approved": "Одобрено",
+  "canceled": "Отменено",
+  "editSponsor": "Изменить спонсоров",
+  "deleteSponsor": "Удалить спонсора"
 }
